		* Fixed Makefiles to be able to compile alcc without alc.
		* Added man pages - English only, for this time. Great thanks to
		  Vollstrecker for his initial work on the man pages!
		* Fixed pressing the 'Clear Completed' button causes a logout
		  on the web interface.
		* Added CVSDATE checks to EC, to make sure that core and remote
		  apps are from the CVS tarball (for CVS users).

		**** For users, who already got used to amulecmd's or amuleweb's
		**** command-line parameters: PLEASE READ DOCUMENTATION CAREFULLY!

	Hetfield:
		* New popup menu and events management for new wx SysTray

	Kry:
		* A lot
		
	lfroen:
		* Amule remote gui implementation
		* EC additions
		* RLE encoder for shared files

	Ken:
		* Fixed Mac bug: window was a little larger each restart
		* Fixed aMule.tmpl so Safari can work with amuleweb
		* On Mac, enabled Command-clicking in lists to toggle selection
		* Solved the DECLARE_ABSTRACT_CLASS() mystery on wx-2.4.2. Now
		we can have UDP socks5 with wx-2.4.2.
		* Included CVSDATE with version in amulesig.dat
		* Fixed an endianness bug with webserver
		* Fixed last (I hope!) endianness bug with IPFilter
		* Fixed a major endianness bug with widespread effects.  On Mac,
		  servers don't fail continuously until eventually removed from the
		  list; server pings work.  Global search seems to work better.
		  DNS lookup of servers and ED2K link sources should now work.

	Kry:
		* New SysTray Core written in wxWidgets (portable and transparent icon)

	ObsessionAl:
		* Patch to include CVS date in about box.

	Phoenix:
		* Fixed crash in CClientReqSocket::ProcessExtPacket()
		processing of OP_COMPRESSEDPART.
		* More UNICODE fixes.
		* Fixed WX_SYSTRAY compilation on wx-2.4.2.
		* More proxy updates, we are getting there.
		* Small UI bug: double click on a server did not change the
		"Connect" button to "Cancel".
		* Changed some deprecated IsKindOf(CLASSINFO()) to
		wxDynamicCast().